--- a/alantree.bib
+++ b/alantree.bib
@@ -67,11 +67,16 @@
   year		= {2016}
 }
 
-@Unpublished{	  janson,
+@Article{	  janson,
   author	= "Janson, Svante",
   title		= "Tail bounds for sums of geometric and exponential
 		  variables",
-  note		= "available in
+  journal       = {Statistics \& Probability Letters},
+  volume        = 135,
+  pages         = {1--6},
+  month         = {April},
+  year          = {2018},
+  xnote		= "available in
 		  \url{http://www2.math.uu.se/~svante/papers/sjN14.pdf}"
 }
 
@@ -145,4 +150,13 @@
   institution	= {University of Utrecht},
   year		= {2004},
   number	= {UU-CS-2004-042}
+}
+
+@Book{bondy.murty:graph,
+  author        = {J. A. Bondy and U. S. R. Murty},
+  title         = {Graph Theory},
+  series        = {Graduate Texts in Mathematics},
+  editor        = {Sheldon Axler and Kenneth Ribet},
+  publisher     = {Springer Verlag},
+  year          = {2008}
 }
